Verification checks. Out by 10 to the 12 or something. Issue with units?

--- a/References.bib
+++ b/References.bib
@@ -255,3 +255,9 @@ keywords = {Case research ; Empirical analysis ; Guidelines ; Heterogeneity ; Me
 }
   
 
+@Manual{tidytransit_timetable,
+  title = {tidytransit, generate a depature timetable},
+  author = {Flavio Poletti and Daniel Herszenhut and Mark Padgham and Tom Buckley and Danton Noriega-Goodwin},
+  year = {undated},
+  url = {https://r-transit.github.io/tidytransit/articles/timetable.html},
+}
