--- a/packages.bib
+++ b/packages.bib
@@ -99,7 +99,7 @@ Tools},
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2023},
-  note = {R package version 1.43},
+  note = {R package version 1.42},
   url = {https://yihui.org/knitr/},
 }
 
@@ -203,7 +203,7 @@ Tools},
   title = {sf: Simple Features for R},
   author = {Edzer Pebesma},
   year = {2023},
-  note = {R package version 1.0-13},
+  note = {R package version 1.0-12},
   url = {https://CRAN.R-project.org/package=sf},
 }
 
@@ -211,7 +211,7 @@ Tools},
   title = {sp: Classes and Methods for Spatial Data},
   author = {Edzer Pebesma and Roger Bivand},
   year = {2023},
-  note = {R package version 1.6-1},
+  note = {R package version 1.6-0},
   url = {https://CRAN.R-project.org/package=sp},
 }
 
@@ -237,14 +237,6 @@ Tools},
   year = {2023},
   note = {R package version 1.3.0},
   url = {https://CRAN.R-project.org/package=tidyr},
-}
-
-@Manual{R-tidytransit,
-  title = {tidytransit: Read, Validate, Analyze, and Map GTFS Feeds},
-  author = {Flavio Poletti and Daniel Herszenhut and Mark Padgham and Tom Buckley and Danton Noriega-Goodwin},
-  year = {2023},
-  note = {R package version 1.5.1},
-  url = {https://github.com/r-transit/tidytransit},
 }
 
 @Manual{R-tidyverse,
@@ -380,7 +372,7 @@ Tools},
 }
 
 @Article{sp2005,
-  author = {Edzer J. Pebesma and Roger Bivand},
+  author = {Edzer J. Pebesma and Roger S. Bivand},
   title = {Classes and methods for spatial data in {R}},
   journal = {R News},
   year = {2005},
